MacView: Use system icons for bookmark bar folders

Cocoa browser's logic for deciding whether to use the light (dark mode)
or regular icon requires converting the theme frame color to an NSColor
in NSCalibratedWhiteColorSpace and checking against an empirical
threshold.

To keep things in Views-land and maintain the same interface, this
change uses the light icon iff color_utils::IsDark returns false
for the given text color.

In practice, I will venture that anywhere this disagrees with Cocoa
is a borderline case anyway.

Bug: 792610
Change-Id: I57b1c0cb90cf06fce4a8a3f31806dedd86791ebc
Reviewed-on: https://chromium-review.googlesource.com/1012966
Reviewed-by: Elly Fong-Jones <ellyjones@chromium.org>
Commit-Queue: Leonard Grey <lgrey@chromium.org>
Cr-Commit-Position: refs/heads/master@{#551037}
Former-commit-id: 31adef92e414f5855cd9def5d176968af4c5c587