chrome/browser/ui/bookmarks/bookmark_utils.h
@@ -103,7 +103,6 @@ bool IsValidBookmarkDropLocation(Profile* profile,
 #if defined(TOOLKIT_VIEWS)
 // |text_color| is the color of associated text and is used to derive the icon's
 // color.
-// TODO(estade): If Mac wants to use these, return gfx::Image instead.
 gfx::ImageSkia GetBookmarkFolderIcon(SkColor text_color);
 gfx::ImageSkia GetBookmarkManagedFolderIcon(SkColor text_color);
 #endif
